--- a/rdoc/README_md.html
+++ b/rdoc/README_md.html
@@ -176,21 +176,23 @@ href="https://github.com/EvidentSecurity/esp_sdk/wiki">V1 WIKI</a>.</p>
 You can set
 these directly:</p>
 
-<pre>  ESP.access_key_id = &lt;your key&gt;
-  ESP.secret_access_key = &lt;your secret key&gt;</pre>
+<pre class="ruby"><span class="ruby-constant">ESP</span>.<span class="ruby-identifier">access_key_id</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">your</span> <span class="ruby-identifier">key</span><span class="ruby-operator">&gt;</span>
+<span class="ruby-constant">ESP</span>.<span class="ruby-identifier">secret_access_key</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">your</span> <span class="ruby-identifier">secret</span> <span class="ruby-identifier">key</span><span class="ruby-operator">&gt;</span>
+</pre>
 
 <p>or with environment variables:</p>
 
-<pre>  ENV[&#39;ESP_ACCESS_KEY_ID&#39;] = &lt;you key&gt;
-  ENV[&#39;ESP_SECRET_ACCESS_KEY&#39;] = &lt;your secret key&gt;</pre>
+<pre class="ruby"><span class="ruby-constant">ENV</span>[<span class="ruby-string">&#39;ESP_ACCESS_KEY_ID&#39;</span>] = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">you</span> <span class="ruby-identifier">key</span><span class="ruby-operator">&gt;</span>
+<span class="ruby-constant">ENV</span>[<span class="ruby-string">&#39;ESP_SECRET_ACCESS_KEY&#39;</span>] = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">your</span> <span class="ruby-identifier">secret</span> <span class="ruby-identifier">key</span><span class="ruby-operator">&gt;</span>
+</pre>
 
 <p>or, if in a Rails application, you can use the configure block in an
 initializer:</p>
 
-<pre class="ruby">  <span class="ruby-constant">ESP</span>.<span class="ruby-identifier">configure</span> <span class="ruby-keyword">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">config</span><span class="ruby-operator">|</span>
-    <span class="ruby-identifier">config</span>.<span class="ruby-identifier">access_key_id</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">your</span> <span class="ruby-identifier">key</span><span class="ruby-operator">&gt;</span>
-    <span class="ruby-identifier">config</span>.<span class="ruby-identifier">secret_access_key</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">your</span> <span class="ruby-identifier">secret</span> <span class="ruby-identifier">key</span><span class="ruby-operator">&gt;</span>
-  <span class="ruby-keyword">end</span>
+<pre class="ruby"><span class="ruby-constant">ESP</span>.<span class="ruby-identifier">configure</span> <span class="ruby-keyword">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">config</span><span class="ruby-operator">|</span>
+  <span class="ruby-identifier">config</span>.<span class="ruby-identifier">access_key_id</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">your</span> <span class="ruby-identifier">key</span><span class="ruby-operator">&gt;</span>
+  <span class="ruby-identifier">config</span>.<span class="ruby-identifier">secret_access_key</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">your</span> <span class="ruby-identifier">secret</span> <span class="ruby-identifier">key</span><span class="ruby-operator">&gt;</span>
+<span class="ruby-keyword">end</span>
 </pre>
 
 <p>Get your HMAC keys from the Evident.io website, <a
@@ -202,14 +204,15 @@ href="https://esp.evident.io/settings/api_keys">esp.evident.io</a></p>
 site for their appliance instance.
 You can set this directly:</p>
 
-<pre>  ESP.site = &lt;url to your appliance instance&gt;</pre>
+<pre class="ruby"><span class="ruby-constant">ESP</span>.<span class="ruby-identifier">site</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">url</span> <span class="ruby-identifier">to</span> <span class="ruby-identifier">your</span> <span class="ruby-identifier">appliance</span> <span class="ruby-identifier">instance</span><span class="ruby-operator">&gt;</span>
+</pre>
 
 <p>or, if in a Rails application, you can use the configure block in an
 initializer:</p>
 
-<pre class="ruby">  <span class="ruby-constant">ESP</span>.<span class="ruby-identifier">configure</span> <span class="ruby-keyword">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">config</span><span class="ruby-operator">|</span>
-    <span class="ruby-identifier">config</span>.<span class="ruby-identifier">site</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">url</span> <span class="ruby-identifier">to</span> <span class="ruby-identifier">your</span> <span class="ruby-identifier">appliance</span> <span class="ruby-identifier">instance</span><span class="ruby-operator">&gt;</span>
-  <span class="ruby-keyword">end</span>
+<pre class="ruby"><span class="ruby-constant">ESP</span>.<span class="ruby-identifier">configure</span> <span class="ruby-keyword">do</span> <span class="ruby-operator">|</span><span class="ruby-identifier">config</span><span class="ruby-operator">|</span>
+  <span class="ruby-identifier">config</span>.<span class="ruby-identifier">site</span> = <span class="ruby-operator">&lt;</span><span class="ruby-identifier">url</span> <span class="ruby-identifier">to</span> <span class="ruby-identifier">your</span> <span class="ruby-identifier">appliance</span> <span class="ruby-identifier">instance</span><span class="ruby-operator">&gt;</span>
+<span class="ruby-keyword">end</span>
 </pre>
 
 <h1 id="label-Usage">Usage<span><a href="#label-Usage">&para;</a> <a href="#documentation">&uarr;</a></span></h1>
@@ -230,21 +233,24 @@ available for each object.
 So, for instance, to get a report by
 ID:</p>
 
-<pre>espsdk:003:0&gt; report = ESP::Report.find(234)</pre>
+<pre class="ruby"><span class="ruby-identifier">espsdk</span>:<span class="ruby-value">003</span><span class="ruby-operator">:</span><span class="ruby-value">0</span><span class="ruby-operator">&gt;</span> <span class="ruby-identifier">report</span> = <span class="ruby-constant">ESP</span><span class="ruby-operator">::</span><span class="ruby-constant">Report</span>.<span class="ruby-identifier">find</span>(<span class="ruby-value">234</span>)
+</pre>
 
 <p>And to get the alerts for that report:</p>
 
-<pre>espsdk:003:0&gt; alerts = report.alerts</pre>
+<pre class="ruby"><span class="ruby-identifier">espsdk</span>:<span class="ruby-value">003</span><span class="ruby-operator">:</span><span class="ruby-value">0</span><span class="ruby-operator">&gt;</span> <span class="ruby-identifier">alerts</span> = <span class="ruby-identifier">report</span>.<span class="ruby-identifier">alerts</span>
+</pre>
 
 <p>For objects that are creatable, updatable, and destroyable, you make the
 exact same calls you would expect to use with Active Record.</p>
 
-<pre>espsdk:003:0&gt; team = ESP::Team.create(name: &#39;MyTeam&#39;, organization_id: 452, sub_organization_id: 599)
-
-espsdk:003:0&gt; team.name = &#39;NewName&#39;
-espsdk:003:0&gt; team.save
-
-espsdk:003:0&gt; team.destroy</pre>
+<pre class="ruby"><span class="ruby-identifier">espsdk</span>:<span class="ruby-value">003</span><span class="ruby-operator">:</span><span class="ruby-value">0</span><span class="ruby-operator">&gt;</span> <span class="ruby-identifier">team</span> = <span class="ruby-constant">ESP</span><span class="ruby-operator">::</span><span class="ruby-constant">Team</span>.<span class="ruby-identifier">create</span>(<span class="ruby-identifier">name</span><span class="ruby-operator">:</span> <span class="ruby-string">&#39;MyTeam&#39;</span>, <span class="ruby-identifier">organization_id</span><span class="ruby-operator">:</span> <span class="ruby-value">452</span>, <span class="ruby-identifier">sub_organization_id</span><span class="ruby-operator">:</span> <span class="ruby-value">599</span>)
+    
+<span class="ruby-identifier">espsdk</span>:<span class="ruby-value">003</span><span class="ruby-operator">:</span><span class="ruby-value">0</span><span class="ruby-operator">&gt;</span> <span class="ruby-identifier">team</span>.<span class="ruby-identifier">name</span> = <span class="ruby-string">&#39;NewName&#39;</span>
+<span class="ruby-identifier">espsdk</span>:<span class="ruby-value">003</span><span class="ruby-operator">:</span><span class="ruby-value">0</span><span class="ruby-operator">&gt;</span> <span class="ruby-identifier">team</span>.<span class="ruby-identifier">save</span>
+    
+<span class="ruby-identifier">espsdk</span>:<span class="ruby-value">003</span><span class="ruby-operator">:</span><span class="ruby-value">0</span><span class="ruby-operator">&gt;</span> <span class="ruby-identifier">team</span>.<span class="ruby-identifier">destroy</span>
+</pre>
 
 <p>Use the <code>attributes</code> method to get a list of all available
 attributes that each object has.</p>
@@ -303,7 +309,7 @@ message:</p>
 <pre class="ruby"><span class="ruby-identifier">espsdk</span>:<span class="ruby-value">003</span><span class="ruby-operator">:</span><span class="ruby-value">0</span><span class="ruby-operator">&gt;</span> <span class="ruby-identifier">c</span> = <span class="ruby-constant">ESP</span><span class="ruby-operator">::</span><span class="ruby-constant">CustomSignature</span>.<span class="ruby-identifier">find</span>(<span class="ruby-value">435</span>)
 <span class="ruby-identifier">espsdk</span>:<span class="ruby-value">003</span><span class="ruby-operator">:</span><span class="ruby-value">0</span><span class="ruby-operator">&gt;</span> <span class="ruby-identifier">c</span>.<span class="ruby-identifier">run!</span>(<span class="ruby-identifier">external_account_id</span><span class="ruby-operator">:</span> <span class="ruby-value">999</span>) <span class="ruby-comment"># =&gt;</span>
 <span class="ruby-constant">ActiveResource</span><span class="ruby-operator">::</span><span class="ruby-constant">ResourceInvalid</span><span class="ruby-operator">:</span> <span class="ruby-constant">Failed</span>.  <span class="ruby-constant">Response</span> <span class="ruby-identifier">code</span> = <span class="ruby-value">422</span>.  <span class="ruby-constant">Response</span> <span class="ruby-identifier">message</span> = <span class="ruby-constant">Couldn</span><span class="ruby-string">&#39;t find ExternalAccount.
-    from /Users/kevintyll/evident/esp_sdk/lib/esp/resources/custom_signature.rb:23:in `run!&#39;</span>
+        from /Users/kevintyll/evident/esp_sdk/lib/esp/resources/custom_signature.rb:23:in `run!&#39;</span>
 
 <span class="ruby-keyword">begin</span>
   <span class="ruby-identifier">c</span>.<span class="ruby-identifier">run!</span>(<span class="ruby-identifier">external_account_id</span><span class="ruby-operator">:</span> <span class="ruby-value">999</span>)
@@ -396,7 +402,7 @@ href="http://www.rubydoc.info/gems/esp_sdk/ESP/Suppression::Region.html">ESP::Su
 href="http://www.rubydoc.info/gems/esp_sdk/ESP/Suppression::Signature.html">ESP::Suppression::Signature</a></p>
 </li><li>
 <p><a
-href="http://www.rubydoc.info/gems/esp_sdk/ESP/UniqueIdentifier.html">ESP::UniqueIdentifier</a></p>
+href="http://www.rubydoc.info/gems/esp_sdk/ESP/Suppression::UniqueIdentifier.html">ESP::Suppression::UniqueIdentifier</a></p>
 </li><li>
 <p><a href="http://www.rubydoc.info/gems/esp_sdk/ESP/Team.html">ESP::Team</a></p>
 </li><li>
