Changes to reflect the changes made in the API.

--- a/rdoc/ActiveResource.html
+++ b/rdoc/ActiveResource.html
@@ -51,7 +51,6 @@
   <ul>
     <li>lib/esp/extensions/active_resource/paginated_collection.rb
     <li>lib/esp/resources/custom_signature.rb
-    <li>lib/esp/resources/report.rb
     <li>lib/esp/resources/resource.rb
     <li>lib/esp/resources/signature.rb
     <li>lib/esp/resources/suppression.rb
@@ -114,6 +113,12 @@
     <li><a href="./ESP/Signature.html">ESP::Signature</a>
   
     <li><a href="./ESP/Stat.html">ESP::Stat</a>
+  
+    <li><a href="./ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+  
+    <li><a href="./ESP/Stat/Region.html">ESP::Stat::Region</a>
+  
+    <li><a href="./ESP/Stat/Signature.html">ESP::Stat::Signature</a>
   
     <li><a href="./ESP/SubOrganization.html">ESP::SubOrganization</a>
   
