--- a/rdoc/ESP.html
+++ b/rdoc/ESP.html
@@ -52,6 +52,7 @@
     <li>lib/esp.rb
     <li>lib/esp/resources/alert.rb
     <li>lib/esp/resources/cloud_trail_event.rb
+    <li>lib/esp/resources/concerns/stat_totals.rb
     <li>lib/esp/resources/contact_request.rb
     <li>lib/esp/resources/custom_signature.rb
     <li>lib/esp/resources/dashboard.rb
@@ -62,6 +63,9 @@
     <li>lib/esp/resources/service.rb
     <li>lib/esp/resources/signature.rb
     <li>lib/esp/resources/stat.rb
+    <li>lib/esp/resources/stat/custom_signature.rb
+    <li>lib/esp/resources/stat/region.rb
+    <li>lib/esp/resources/stat/signature.rb
     <li>lib/esp/resources/sub_organization.rb
     <li>lib/esp/resources/suppression.rb
     <li>lib/esp/resources/suppression/region.rb
@@ -153,6 +157,12 @@
   
     <li><a href="./ESP/Stat.html">ESP::Stat</a>
   
+    <li><a href="./ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+  
+    <li><a href="./ESP/Stat/Region.html">ESP::Stat::Region</a>
+  
+    <li><a href="./ESP/Stat/Signature.html">ESP::Stat::Signature</a>
+  
     <li><a href="./ESP/SubOrganization.html">ESP::SubOrganization</a>
   
     <li><a href="./ESP/Suppression.html">ESP::Suppression</a>
@@ -178,6 +188,8 @@
 
   <div id="description" class="description">
     
+<p>class note</p>
+
   </div><!-- description -->
 
   
