--- a/rdoc/ESP/ExternalAccount.html
+++ b/rdoc/ESP/ExternalAccount.html
@@ -136,6 +136,12 @@
   
     <li><a href="../ESP/Stat.html">ESP::Stat</a>
   
+    <li><a href="../ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+  
+    <li><a href="../ESP/Stat/Region.html">ESP::Stat::Region</a>
+  
+    <li><a href="../ESP/Stat/Signature.html">ESP::Stat::Signature</a>
+  
     <li><a href="../ESP/SubOrganization.html">ESP::SubOrganization</a>
   
     <li><a href="../ESP/Suppression.html">ESP::Suppression</a>
@@ -207,7 +213,7 @@
 href="ExternalAccount.html#method-i-generate_external_id">generate_external_id</a>
 if not already set.</p>
 </li><li>
-<p><code>nickname</code></p>
+<p><code>name</code></p>
 </li><li>
 <p><code>sub_organization_id</code></p>
 </li><li>
@@ -317,7 +323,7 @@ is not already set.</p>
         
         <div class="method-heading">
           <span class="method-callseq">
-            new(nickname: &#39;nickname&#39;, arn: &#39;arn&#39;, sub_organization_id: 2, team_id: 3).save
+            new(name: &#39;name&#39;, arn: &#39;arn&#39;, sub_organization_id: 2, team_id: 3).save
           </span>
           
         </div>
@@ -336,7 +342,7 @@ is not already set.</p>
 href="ExternalAccount.html#method-i-generate_external_id">generate_external_id</a>
 if not already set.</p>
 </li><li>
-<p><code>nickname</code></p>
+<p><code>name</code></p>
 </li><li>
 <p><code>sub_organization_id</code></p>
 </li><li>
