--- a/rdoc/ESP/Suppression/Signature.html
+++ b/rdoc/ESP/Suppression/Signature.html
@@ -134,6 +134,12 @@
   
     <li><a href="../../ESP/Stat.html">ESP::Stat</a>
   
+    <li><a href="../../ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+  
+    <li><a href="../../ESP/Stat/Region.html">ESP::Stat::Region</a>
+  
+    <li><a href="../../ESP/Stat/Signature.html">ESP::Stat::Signature</a>
+  
     <li><a href="../../ESP/SubOrganization.html">ESP::SubOrganization</a>
   
     <li><a href="../../ESP/Suppression.html">ESP::Suppression</a>
