Add Region and Tag objects to call new region and tag endpoints.  Removed create update destroy from Signature.  Added missing docs to Signature.

--- a/rdoc/ESP.html
+++ b/rdoc/ESP.html
@@ -58,6 +58,7 @@
     <li>lib/esp/resources/dashboard.rb
     <li>lib/esp/resources/external_account.rb
     <li>lib/esp/resources/organization.rb
+    <li>lib/esp/resources/region.rb
     <li>lib/esp/resources/report.rb
     <li>lib/esp/resources/resource.rb
     <li>lib/esp/resources/service.rb
@@ -71,6 +72,7 @@
     <li>lib/esp/resources/suppression/region.rb
     <li>lib/esp/resources/suppression/signature.rb
     <li>lib/esp/resources/suppression/unique_identifier.rb
+    <li>lib/esp/resources/tag.rb
     <li>lib/esp/resources/team.rb
     <li>lib/esp/resources/user.rb
   </ul>
@@ -149,6 +151,8 @@
   
     <li><a href="./ESP/Organization.html">ESP::Organization</a>
   
+    <li><a href="./ESP/Region.html">ESP::Region</a>
+  
     <li><a href="./ESP/Report.html">ESP::Report</a>
   
     <li><a href="./ESP/Service.html">ESP::Service</a>
@@ -172,6 +176,8 @@
     <li><a href="./ESP/Suppression/Signature.html">ESP::Suppression::Signature</a>
   
     <li><a href="./ESP/Suppression/UniqueIdentifier.html">ESP::Suppression::UniqueIdentifier</a>
+  
+    <li><a href="./ESP/Tag.html">ESP::Tag</a>
   
     <li><a href="./ESP/Team.html">ESP::Team</a>
   
