--- a/rdoc/index.html
+++ b/rdoc/index.html
@@ -81,6 +81,8 @@
   
     <li><a href="./ESP/Organization.html">ESP::Organization</a>
   
+    <li><a href="./ESP/Region.html">ESP::Region</a>
+  
     <li><a href="./ESP/Report.html">ESP::Report</a>
   
     <li><a href="./ESP/Service.html">ESP::Service</a>
@@ -104,6 +106,8 @@
     <li><a href="./ESP/Suppression/Signature.html">ESP::Suppression::Signature</a>
   
     <li><a href="./ESP/Suppression/UniqueIdentifier.html">ESP::Suppression::UniqueIdentifier</a>
+  
+    <li><a href="./ESP/Tag.html">ESP::Tag</a>
   
     <li><a href="./ESP/Team.html">ESP::Team</a>
   
