--- a/rdoc/ESP/Team.html
+++ b/rdoc/ESP/Team.html
@@ -134,6 +134,8 @@
   
     <li><a href="../ESP/Organization.html">ESP::Organization</a>
   
+    <li><a href="../ESP/Region.html">ESP::Region</a>
+  
     <li><a href="../ESP/Report.html">ESP::Report</a>
   
     <li><a href="../ESP/Service.html">ESP::Service</a>
@@ -157,6 +159,8 @@
     <li><a href="../ESP/Suppression/Signature.html">ESP::Suppression::Signature</a>
   
     <li><a href="../ESP/Suppression/UniqueIdentifier.html">ESP::Suppression::UniqueIdentifier</a>
+  
+    <li><a href="../ESP/Tag.html">ESP::Tag</a>
   
     <li><a href="../ESP/Team.html">ESP::Team</a>
   
