Sync documentation up with the API documentation. Add suppress convenience methods to signature, custom_signature and region objects.

--- a/rdoc/README_md.html
+++ b/rdoc/README_md.html
@@ -233,11 +233,11 @@ initializer:</p>
 <p>The Evident.io SDK uses Active Resource, so the DSL acts very much like
 Active Record providing by default, the standard CRUD
 actions
-<code>find</code>, <code>create</code>, <code>update</code>,
-<code>destroy</code>, only instead of a database as the data store, it
-makes calls to the Evident.io API. Not all
-methods are available for all <a
-href="ESP.html">ESP</a> objects. See the <a
+<code>find</code>, <code>all</code>, <code>create</code>,
+<code>update</code>, <code>destroy</code>, only instead of a database as
+the data store, it makes calls to the Evident.io API. Not all
+methods are
+available for all <a href="ESP.html">ESP</a> objects. See the <a
 href="http://www.rubydoc.info/gems/esp_sdk">documentation</a> to see all
 the methods
 available for each object.
@@ -427,6 +427,9 @@ href="http://www.rubydoc.info/gems/esp_sdk/ESP/ExternalAccount.html">ESP::Extern
 href="http://www.rubydoc.info/gems/esp_sdk/ESP/Organization.html">ESP::Organization</a></p>
 </li><li>
 <p><a
+href="http://www.rubydoc.info/gems/esp_sdk/ESP/Region.html">ESP::Region</a></p>
+</li><li>
+<p><a
 href="http://www.rubydoc.info/gems/esp_sdk/ESP/Report.html">ESP::Report</a></p>
 </li><li>
 <p><a
@@ -451,6 +454,8 @@ href="http://www.rubydoc.info/gems/esp_sdk/ESP/Suppression::Signature.html">ESP:
 </li><li>
 <p><a
 href="http://www.rubydoc.info/gems/esp_sdk/ESP/Suppression::UniqueIdentifier.html">ESP::Suppression::UniqueIdentifier</a></p>
+</li><li>
+<p><a href="http://www.rubydoc.info/gems/esp_sdk/ESP/Tag.html">ESP::Tag</a></p>
 </li><li>
 <p><a href="http://www.rubydoc.info/gems/esp_sdk/ESP/Team.html">ESP::Team</a></p>
 </li><li>
