Add new Stat Objects to handle new stat endpoints.

--- a/rdoc/ActiveResource/PaginatedCollection.html
+++ b/rdoc/ActiveResource/PaginatedCollection.html
@@ -160,11 +160,11 @@
   
     <li><a href="../ESP/Stat.html">ESP::Stat</a>
   
-    <li><a href="../ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+    <li><a href="../ESP/StatCustomSignature.html">ESP::StatCustomSignature</a>
   
-    <li><a href="../ESP/Stat/Region.html">ESP::Stat::Region</a>
+    <li><a href="../ESP/StatRegion.html">ESP::StatRegion</a>
   
-    <li><a href="../ESP/Stat/Signature.html">ESP::Stat::Signature</a>
+    <li><a href="../ESP/StatSignature.html">ESP::StatSignature</a>
   
     <li><a href="../ESP/SubOrganization.html">ESP::SubOrganization</a>
   
