--- a/rdoc/ESP/Tag.html
+++ b/rdoc/ESP/Tag.html
@@ -134,11 +134,11 @@
   
     <li><a href="../ESP/Stat.html">ESP::Stat</a>
   
-    <li><a href="../ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+    <li><a href="../ESP/StatCustomSignature.html">ESP::StatCustomSignature</a>
   
-    <li><a href="../ESP/Stat/Region.html">ESP::Stat::Region</a>
+    <li><a href="../ESP/StatRegion.html">ESP::StatRegion</a>
   
-    <li><a href="../ESP/Stat/Signature.html">ESP::Stat::Signature</a>
+    <li><a href="../ESP/StatSignature.html">ESP::StatSignature</a>
   
     <li><a href="../ESP/SubOrganization.html">ESP::SubOrganization</a>
   
@@ -255,9 +255,8 @@ method to use instead of <a href="Tag.html#method-c-find">::find</a> since
 an alert_id is required to return tags.</p>
 
 <h4 id="method-c-for_alert-label-Parameter">Parameter<span><a href="#method-c-for_alert-label-Parameter">&para;</a> <a href="#documentation">&uarr;</a></span></h4>
-<ul><li>
+
 <p><code>alert_id</code> | Required | The ID of the alert to list tags for</p>
-</li></ul>
 
 <h4 id="method-c-for_alert-label-Example">Example<span><a href="#method-c-for_alert-label-Example">&para;</a> <a href="#documentation">&uarr;</a></span></h4>
 
