--- a/rdoc/ESP.html
+++ b/rdoc/ESP.html
@@ -64,9 +64,9 @@
     <li>lib/esp/resources/service.rb
     <li>lib/esp/resources/signature.rb
     <li>lib/esp/resources/stat.rb
-    <li>lib/esp/resources/stat/custom_signature.rb
-    <li>lib/esp/resources/stat/region.rb
-    <li>lib/esp/resources/stat/signature.rb
+    <li>lib/esp/resources/stat_custom_signature.rb
+    <li>lib/esp/resources/stat_region.rb
+    <li>lib/esp/resources/stat_signature.rb
     <li>lib/esp/resources/sub_organization.rb
     <li>lib/esp/resources/suppression.rb
     <li>lib/esp/resources/suppression/region.rb
@@ -161,11 +161,11 @@
   
     <li><a href="./ESP/Stat.html">ESP::Stat</a>
   
-    <li><a href="./ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+    <li><a href="./ESP/StatCustomSignature.html">ESP::StatCustomSignature</a>
   
-    <li><a href="./ESP/Stat/Region.html">ESP::Stat::Region</a>
+    <li><a href="./ESP/StatRegion.html">ESP::StatRegion</a>
   
-    <li><a href="./ESP/Stat/Signature.html">ESP::Stat::Signature</a>
+    <li><a href="./ESP/StatSignature.html">ESP::StatSignature</a>
   
     <li><a href="./ESP/SubOrganization.html">ESP::SubOrganization</a>
   
@@ -194,8 +194,6 @@
 
   <div id="description" class="description">
     
-<p>class note</p>
-
   </div><!-- description -->
 
   
