--- a/rdoc/ESP/Report.html
+++ b/rdoc/ESP/Report.html
@@ -146,11 +146,11 @@
   
     <li><a href="../ESP/Stat.html">ESP::Stat</a>
   
-    <li><a href="../ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+    <li><a href="../ESP/StatCustomSignature.html">ESP::StatCustomSignature</a>
   
-    <li><a href="../ESP/Stat/Region.html">ESP::Stat::Region</a>
+    <li><a href="../ESP/StatRegion.html">ESP::StatRegion</a>
   
-    <li><a href="../ESP/Stat/Signature.html">ESP::Stat::Signature</a>
+    <li><a href="../ESP/StatSignature.html">ESP::StatSignature</a>
   
     <li><a href="../ESP/SubOrganization.html">ESP::SubOrganization</a>
   
@@ -494,7 +494,7 @@ alerts = report.alerts(status: &#39;fail&#39;, signature_severity: &#39;High&#39
           <div class="method-source-code" id="stat-source">
             <pre><span class="ruby-comment"># File lib/esp/resources/report.rb, line 82</span>
 <span class="ruby-keyword">def</span> <span class="ruby-identifier">stat</span>
-  <span class="ruby-constant">Stat</span>.<span class="ruby-identifier">for_report</span>(<span class="ruby-identifier">id</span>)
+  <span class="ruby-constant">ESP</span><span class="ruby-operator">::</span><span class="ruby-constant">Stat</span>.<span class="ruby-identifier">for_report</span>(<span class="ruby-identifier">id</span>)
 <span class="ruby-keyword">end</span></pre>
           </div><!-- stat-source -->
           
