--- a/rdoc/ESP/Suppression.html
+++ b/rdoc/ESP/Suppression.html
@@ -52,6 +52,7 @@
     <li>lib/esp.rb
     <li>lib/esp/resources/alert.rb
     <li>lib/esp/resources/custom_signature.rb
+    <li>lib/esp/resources/region.rb
     <li>lib/esp/resources/signature.rb
     <li>lib/esp/resources/suppression.rb
     <li>lib/esp/resources/suppression/region.rb
@@ -149,11 +150,11 @@
   
     <li><a href="../ESP/Stat.html">ESP::Stat</a>
   
-    <li><a href="../ESP/Stat/CustomSignature.html">ESP::Stat::CustomSignature</a>
+    <li><a href="../ESP/StatCustomSignature.html">ESP::StatCustomSignature</a>
   
-    <li><a href="../ESP/Stat/Region.html">ESP::Stat::Region</a>
+    <li><a href="../ESP/StatRegion.html">ESP::StatRegion</a>
   
-    <li><a href="../ESP/Stat/Signature.html">ESP::Stat::Signature</a>
+    <li><a href="../ESP/StatSignature.html">ESP::StatSignature</a>
   
     <li><a href="../ESP/SubOrganization.html">ESP::SubOrganization</a>
   
