Add stat service

--- a/rdoc/ESP.html
+++ b/rdoc/ESP.html
@@ -66,6 +66,7 @@
     <li>lib/esp/resources/stat.rb
     <li>lib/esp/resources/stat_custom_signature.rb
     <li>lib/esp/resources/stat_region.rb
+    <li>lib/esp/resources/stat_service.rb
     <li>lib/esp/resources/stat_signature.rb
     <li>lib/esp/resources/sub_organization.rb
     <li>lib/esp/resources/suppression.rb
@@ -164,6 +165,8 @@
     <li><a href="./ESP/StatCustomSignature.html">ESP::StatCustomSignature</a>
   
     <li><a href="./ESP/StatRegion.html">ESP::StatRegion</a>
+  
+    <li><a href="./ESP/StatService.html">ESP::StatService</a>
   
     <li><a href="./ESP/StatSignature.html">ESP::StatSignature</a>
   
