--- a/rdoc/README_md.html
+++ b/rdoc/README_md.html
@@ -118,6 +118,8 @@
   
     <li><a href="./ESP/StatRegion.html">ESP::StatRegion</a>
   
+    <li><a href="./ESP/StatService.html">ESP::StatService</a>
+  
     <li><a href="./ESP/StatSignature.html">ESP::StatSignature</a>
   
     <li><a href="./ESP/SubOrganization.html">ESP::SubOrganization</a>
