--- a/rdoc/table_of_contents.html
+++ b/rdoc/table_of_contents.html
@@ -288,11 +288,13 @@
   
     <li class="method"><a href="ESP/StatService.html#method-c-for_stat">::for_stat &mdash; ESP::StatService</a>
   
-    <li class="method"><a href="ESP/StatRegion.html#method-c-for_stat">::for_stat &mdash; ESP::StatRegion</a>
+    <li class="method"><a href="ESP/StatSignature.html#method-c-for_stat">::for_stat &mdash; ESP::StatSignature</a>
   
     <li class="method"><a href="ESP/StatCustomSignature.html#method-c-for_stat">::for_stat &mdash; ESP::StatCustomSignature</a>
   
-    <li class="method"><a href="ESP/StatSignature.html#method-c-for_stat">::for_stat &mdash; ESP::StatSignature</a>
+    <li class="method"><a href="ESP/StatRegion.html#method-c-for_stat">::for_stat &mdash; ESP::StatRegion</a>
+  
+    <li class="method"><a href="ESP.html#method-c-host-3D">::host= &mdash; ESP</a>
   
     <li class="method"><a href="ESP/Stat.html#method-c-latest_for_teams">::latest_for_teams &mdash; ESP::Stat</a>
   
@@ -308,8 +310,6 @@
   
     <li class="method"><a href="ESP.html#method-c-site">::site &mdash; ESP</a>
   
-    <li class="method"><a href="ESP.html#method-c-site-3D">::site= &mdash; ESP</a>
-  
     <li class="method"><a href="ESP/Report.html#method-i-alerts">#alerts &mdash; ESP::Report</a>
   
     <li class="method"><a href="ESP/Alert.html#method-i-cloud_trail_events">#cloud_trail_events &mdash; ESP::Alert</a>
@@ -324,9 +324,9 @@
   
     <li class="method"><a href="ESP/Alert.html#method-i-custom_signature">#custom_signature &mdash; ESP::Alert</a>
   
-    <li class="method"><a href="ESP/Suppression.html#method-i-custom_signatures">#custom_signatures &mdash; ESP::Suppression</a>
-  
     <li class="method"><a href="ESP/Stat.html#method-i-custom_signatures">#custom_signatures &mdash; ESP::Stat</a>
+  
+    <li class="method"><a href="ESP/Suppression.html#method-i-custom_signatures">#custom_signatures &mdash; ESP::Suppression</a>
   
     <li class="method"><a href="ESP/Organization.html#method-i-custom_signatures">#custom_signatures &mdash; ESP::Organization</a>
   
