--- a/rdoc/ESP.html
+++ b/rdoc/ESP.html
@@ -57,6 +57,7 @@
     <li>lib/esp/resources/custom_signature.rb
     <li>lib/esp/resources/dashboard.rb
     <li>lib/esp/resources/external_account.rb
+    <li>lib/esp/resources/metadata.rb
     <li>lib/esp/resources/organization.rb
     <li>lib/esp/resources/region.rb
     <li>lib/esp/resources/report.rb
@@ -149,6 +150,8 @@
     <li><a href="./ESP/Dashboard.html">ESP::Dashboard</a>
   
     <li><a href="./ESP/ExternalAccount.html">ESP::ExternalAccount</a>
+  
+    <li><a href="./ESP/Metadata.html">ESP::Metadata</a>
   
     <li><a href="./ESP/Organization.html">ESP::Organization</a>
   
