--- a/rdoc/ActiveResource/PaginatedCollection.html
+++ b/rdoc/ActiveResource/PaginatedCollection.html
@@ -285,7 +285,7 @@ with the first page of results.</p>
           <div class="method-source-code" id="first_page-source">
             <pre><span class="ruby-comment"># File lib/esp/extensions/active_resource/paginated_collection.rb, line 28</span>
 <span class="ruby-keyword">def</span> <span class="ruby-identifier">first_page</span>
-  <span class="ruby-identifier">previous_page?</span> <span class="ruby-operator">?</span> <span class="ruby-identifier">resource_class</span>.<span class="ruby-identifier">where</span>(<span class="ruby-identifier">original_params</span>.<span class="ruby-identifier">merge</span>({ <span class="ruby-identifier">from</span><span class="ruby-operator">:</span> <span class="ruby-identifier">from</span>, <span class="ruby-identifier">page</span><span class="ruby-operator">:</span> { <span class="ruby-identifier">number</span><span class="ruby-operator">:</span> <span class="ruby-value">1</span> } })) <span class="ruby-operator">:</span> <span class="ruby-keyword">self</span>
+  <span class="ruby-identifier">previous_page?</span> <span class="ruby-operator">?</span> <span class="ruby-identifier">resource_class</span>.<span class="ruby-identifier">where</span>(<span class="ruby-identifier">original_params</span>.<span class="ruby-identifier">merge</span>(<span class="ruby-identifier">from</span><span class="ruby-operator">:</span> <span class="ruby-identifier">from</span>, <span class="ruby-identifier">page</span><span class="ruby-operator">:</span> { <span class="ruby-identifier">number</span><span class="ruby-operator">:</span> <span class="ruby-value">1</span> })) <span class="ruby-operator">:</span> <span class="ruby-keyword">self</span>
 <span class="ruby-keyword">end</span></pre>
           </div><!-- first_page-source -->
           
