Add script to automatically create external accounts and teams.

--- a/rdoc/README_md.html
+++ b/rdoc/README_md.html
@@ -727,7 +727,7 @@ href="ESP/Suppression/UniqueIdentifier.html">ESP::Suppression::UniqueIdentifier<
 <h1 id="label-Console">Console<span><a href="#label-Console">&para;</a> <a href="#documentation">&uarr;</a></span></h1>
 
 <p>The Evident.io SDK gem also provides an IRB console you can use if not
-using it in a Rails app. Run it with <code>esp_console</code></p>
+using it in a Rails app. Run it with <code>esp console</code></p>
 
 <h2 id="label-Contributing">Contributing<span><a href="#label-Contributing">&para;</a> <a href="#documentation">&uarr;</a></span></h2>
 <ol><li>
